<resources>
    <string name="app_name">PalayLab</string>
    <string name="action_settings">Settings</string>
    <string name="error_message_no_more_space">
        Your storage is unavailable.</string>
    <string name="error_message_insufficient_space">
        You have few space available, please make sure your have more than 5MB on disk to
        take pictures!</string>
    <string name="ok">Ok</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_gallery">Choose from Gallery</string>
    <string name="url_androidwave">https://androidwave.com/</string>
    <string name="url_androidwave_android">https://androidwave.com/category/android/</string>
    <string name="message">This is an Open Source project. Contribute to this project by visiting
        <a href="https://github.com/marcreyesph/palaylab-mobile/">https://github.com/marcreyesph/palaylab-mobile/</a></string>
    <string name="email_hint">E-mail Hint</string>
    <string name="get_password_link">Get Password Link</string>
    <string name="back">Back</string>
    <string name="password_hint">Password Hint</string>
    <string name="login_btn">Login</string>
    <string name="signup_btn">Sign Up</string>
    <string name="new_password">New Password</string>
    <string name="update_pass">Update Password</string>
    <string name="logout">Logout</string>
</resources>