<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/palaylab"
            app:tint="#115533" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/email_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gorditamedium"
                android:hint="@string/email_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">

            <EditText
                android:id="@+id/pass_edt_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/gorditamedium"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/roundbutton"
            android:fontFamily="@font/gorditabold"
            android:text="@string/login_btn"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/reset_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:fontFamily="@font/gorditamedium"
            android:text="Forgot password?" />

        <!--        <RelativeLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginTop="16dp">-->

        <!--            <TextView-->
        <!--                android:id="@+id/tvText"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_centerInParent="true"-->
        <!--                android:layout_marginLeft="10dp"-->
        <!--                android:layout_marginRight="10dp"-->
        <!--                android:fontFamily="@font/gorditamedium"-->
        <!--                android:text="OR"-->
        <!--                android:textColor="#000000" />-->

        <!--            <View-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="1dp"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_marginLeft="16dp"-->
        <!--                android:layout_toLeftOf="@id/tvText"-->
        <!--                android:background="#000000" />-->

        <!--            <View-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="1dp"-->
        <!--                android:layout_centerVertical="true"-->
        <!--                android:layout_marginRight="16dp"-->
        <!--                android:layout_toRightOf="@id/tvText"-->
        <!--                android:background="#000000" />-->

        <!--        </RelativeLayout>-->

        <!--        <Button-->
        <!--            android:id="@+id/signup_btn"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="56dp"-->
        <!--            android:layout_marginTop="16dp"-->
        <!--            android:background="@drawable/roundbuttonaccent"-->
        <!--            android:fontFamily="@font/gorditabold"-->
        <!--            android:text="@string/signup_btn"-->
        <!--            android:textColor="#ffffff" />-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>